Bug 199161 - Konsole crashes on several situations (resizing the window) (TerminalDisplay::paintFilters, TerminalDisplay::paintEvent)
Summary: Konsole crashes on several situations (resizing the window) (TerminalDisplay:...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 152493 204171 204173 204255 204986 205122 205499 206068 207145 207318 208172 208522 208551 208754 211457 213465 213789 214133 214486 215888 216235 217075 218025 218174 218374 224412 224940 225614 225737 226214 226645 228156 231070 235213 236478 241411 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-06 16:00 UTC by Dan Dobrescu
Modified: 2015-12-15 20:31 UTC (History)
39 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Konsole crashlog via yakuake (4.68 KB, application/octet-stream)
2009-10-15 15:55 UTC, Niek Beernink
Details
New crash information added by DrKonqi (8.38 KB, text/plain)
2010-02-12 14:08 UTC, Tobias Hochgürtel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Dobrescu 2009-07-06 16:00:46 UTC
Application that crashed: konsole
Version of the application: 2.3
KDE Version: 4.2.95 (KDE 4.2.95 (KDE 4.3 RC1))
Qt Version: 4.5.0
Operating System: Linux 2.6.28-13-generic i686
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
I was modifying the resolution in control center - display when the konsole crashed.. The resolution was 1280x1024 (and the konsole was opened when i had this resolution), and when i've modified it to 1280x800 it crashed. 

 -- Backtrace:
Application: Konsole (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0xb3a211f4 in Konsole::TerminalDisplay::paintFilters () from /usr/lib/libkonsoleprivate.so
#7  0xb3a22a54 in Konsole::TerminalDisplay::paintEvent () from /usr/lib/libkonsoleprivate.so
#8  0xb68e991e in QWidget::event () from /usr/lib/libQtGui.so.4
#9  0xb3a19590 in Konsole::TerminalDisplay::event () from /usr/lib/libkonsoleprivate.so
#10 0xb6892e9c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#11 0xb689b282 in QApplication::notify () from /usr/lib/libQtGui.so.4
#12 0xb73cd3dd in KApplication::notify () from /usr/lib/libkdeui.so.5
#13 0xb7e02a3b in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#14 0xb689dfee in QCoreApplication::sendSpontaneousEvent () from /usr/lib/libQtGui.so.4
#15 0xb68f1719 in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#16 0xb68f1ebe in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#17 0xb68f130a in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#18 0xb68f1ebe in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#19 0xb68f130a in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#20 0xb68f1ebe in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#21 0xb68f130a in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#22 0xb68f1ebe in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#23 0xb68f130a in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#24 0xb68f1ebe in QWidgetPrivate::paintSiblingsRecursive () from /usr/lib/libQtGui.so.4
#25 0xb68f130a in QWidgetPrivate::drawWidget () from /usr/lib/libQtGui.so.4
#26 0xb6aae08a in ?? () from /usr/lib/libQtGui.so.4
#27 0xb68e1bb6 in QWidgetPrivate::syncBackingStore () from /usr/lib/libQtGui.so.4
#28 0xb68fb15e in ?? () from /usr/lib/libQtGui.so.4
#29 0xb6909218 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#30 0xb6934c6a in ?? () from /usr/lib/libQtGui.so.4
#31 0xb6425b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0xb64290eb in ?? () from /usr/lib/libglib-2.0.so.0
#33 0xb6429268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0xb7e2e438 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#35 0xb6934365 in ?? () from /usr/lib/libQtGui.so.4
#36 0xb7e0106a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#37 0xb7e014aa in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#38 0xb7e03959 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#39 0xb6892d17 in QApplication::exec () from /usr/lib/libQtGui.so.4
#40 0xb3b225d2 in kdemain () from /usr/lib/libkdeinit4_konsole.so
#41 0x0804e1c0 in _start ()

Reported using DrKonqi
Comment 1 Dario Andres 2009-08-17 16:23:15 UTC
*** Bug 204173 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-08-17 16:23:41 UTC
*** Bug 204171 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-08-17 16:25:15 UTC
If anyone can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? You may need to install the debug symbols packages for "kdebase" ("kdebase-apps-dbg" in Ubuntu, "kdebase4-apps-debuginfo" in openSuse). Thanks
Comment 4 Dario Andres 2009-08-18 15:33:16 UTC
*** Bug 204255 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2009-08-25 03:08:39 UTC
*** Bug 204986 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-08-25 03:09:11 UTC
Complete backtrace from bug 204986:

#5  0x0000003ec50b4424 in QChar (this=<value optimized out>, painter=<value
optimized out>) at /usr/include/qt4/QtCore/qchar.h:81
#6  Konsole::TerminalDisplay::paintFilters (this=<value optimized out>,
painter=<value optimized out>) at
../../../../apps/konsole/src/TerminalDisplay.cpp:1321
#7  0x0000003ec50b5a8c in Konsole::TerminalDisplay::paintEvent (this=<value
optimized out>, pe=<value optimized out>) at
../../../../apps/konsole/src/TerminalDisplay.cpp:1212
#8  0x0000003ec3227966 in QWidget::event (this=<value optimized out>,
event=<value optimized out>) at kernel/qwidget.cpp:7687
Comment 7 Dario Andres 2009-08-25 23:15:45 UTC
*** Bug 205122 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-09-04 01:01:46 UTC
*** Bug 206068 has been marked as a duplicate of this bug. ***
Comment 9 Kurt Hindenburg 2009-09-04 05:14:42 UTC
*** Bug 152493 has been marked as a duplicate of this bug. ***
Comment 10 Kurt Hindenburg 2009-09-04 05:15:09 UTC
*** Bug 205499 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2009-09-12 16:28:26 UTC
*** Bug 207145 has been marked as a duplicate of this bug. ***
Comment 12 Dario Andres 2009-09-14 14:28:46 UTC
*** Bug 207318 has been marked as a duplicate of this bug. ***
Comment 13 Will Stephenson 2009-09-16 17:45:42 UTC
Downstream: https://bugzilla.novell.com/show_bug.cgi?id=527734
Comment 14 Dario Andres 2009-09-22 16:51:12 UTC
*** Bug 208172 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2009-09-26 03:21:44 UTC
*** Bug 208551 has been marked as a duplicate of this bug. ***
Comment 16 Dario Andres 2009-09-26 03:22:48 UTC
*** Bug 208522 has been marked as a duplicate of this bug. ***
Comment 17 Kurt Hindenburg 2009-09-26 18:35:07 UTC
Were all these from changing screen resolution?  Can anyone reproduce it all the time? and if so could you please let us know what you did.
Comment 18 Mark Brandis 2009-09-26 18:56:03 UTC
In reply to #17, I entered Bug #208551:
I did no resizing, while my konsole crashed, a least no resizing that I would be aware of. Actually I was waiting for a command line command to finish.
Comment 19 Greg Martyn 2009-09-26 20:08:06 UTC
I wasn't changing my screen's resolution. I was just un-maximizing the konsole window.

I provided a complete backtrace in bug #208522. I had all the debugging packages installed.
Comment 20 Dario Andres 2009-09-29 03:36:44 UTC
*** Bug 208754 has been marked as a duplicate of this bug. ***
Comment 21 rolflinden 2009-09-30 20:06:40 UTC
Bug 208754 should contain backtraces too, *-debuginfo packages were installed.
Comment 22 Niek Beernink 2009-10-15 15:55:50 UTC
Created attachment 37593 [details]
Konsole crashlog via yakuake

It seems I got this same crash through yakuake. I was not changing my desktop resolution though. I did change the resolution of the console by doing the following in yakuake (which I guess counts as a resolution change)

This is what I remember doing:

1. Pressed accesskey to show the console
2. Pressed shorcut for fullscreen (effectively a resize?)
3. Did some work
4. Pressed accesskey again to hide the console
5. Pressed accesskey again to show and there it crashed.
Comment 23 Dario Andres 2009-10-22 23:39:07 UTC
From bug 211457:
What I was doing when the application crashed:
Konsole crashed while I was using irssi and tried to split the window
horizontally. I had 5 other tabbed windows open at the same time in Konsole.
Comment 24 Dario Andres 2009-10-22 23:39:12 UTC
*** Bug 211457 has been marked as a duplicate of this bug. ***
Comment 25 Eike Hein 2009-11-09 02:19:06 UTC
*** Bug 213789 has been marked as a duplicate of this bug. ***
Comment 26 Dario Andres 2009-11-11 02:51:35 UTC
From bug 213465:
---
What I was doing when the application crashed:
Crashed while trying to move maximized konsole to second monitor, konsole is
transparent, vlc was in background playing back a .avi.
Comment 27 Dario Andres 2009-11-11 02:51:40 UTC
*** Bug 213465 has been marked as a duplicate of this bug. ***
Comment 28 Dario Andres 2009-11-11 21:59:35 UTC
*** Bug 214133 has been marked as a duplicate of this bug. ***
Comment 29 Dario Andres 2009-11-14 14:24:18 UTC
From bug 214486:
---
What I was doing when the application crashed:
- Running aptitude in konsole
- Unmaximize konsole horizontally via hot-key
- Crash of konsole
Comment 30 Dario Andres 2009-11-14 14:24:22 UTC
*** Bug 214486 has been marked as a duplicate of this bug. ***
Comment 31 Dario Andres 2009-11-23 22:22:23 UTC
*** Bug 215888 has been marked as a duplicate of this bug. ***
Comment 32 Eike Hein 2009-12-02 17:51:32 UTC
*** Bug 217075 has been marked as a duplicate of this bug. ***
Comment 33 Eike Hein 2009-12-10 04:44:06 UTC
*** Bug 218025 has been marked as a duplicate of this bug. ***
Comment 34 Dario Andres 2009-12-10 22:32:54 UTC
From bug 216235:
---
What I was doing when the application crashed:
I had three tabs open - two of them running ssh to a remote server. One of them
running a tail -f command on a log file. The other one just connected.
In the locale tab i just ran "cat" on a rather large xml file ~72 mb. The "cat"
command did not run smoothly

From bug 218174:
---
What I was doing when the application crashed:
Had a few tabs open, was in a tab running a pretty colored emerge, then clicked
another tab and Konsole crashed. This backtrace may have more data than those
posted by others I saw on the original bug page.

Backtrace:
---
#5  0x00007f2f4e1a60d7 in QChar (this=0x1321320, painter=...) at
/usr/include/qt4/QtCore/qchar.h:81
#6  Konsole::TerminalDisplay::paintFilters (this=0x1321320, painter=...) at
/var/tmp/portage/kde-base/konsole-4.3.4/work/konsole-4.3.4/konsole/src/TerminalDisplay.cpp:1321
#7  0x00007f2f4e1a78d1 in Konsole::TerminalDisplay::paintEvent (this=0x1321320,
pe=<value optimized out>)
    at
/var/tmp/portage/kde-base/konsole-4.3.4/work/konsole-4.3.4/konsole/src/TerminalDisplay.cpp:1212
Comment 35 Dario Andres 2009-12-10 22:33:15 UTC
*** Bug 216235 has been marked as a duplicate of this bug. ***
Comment 36 Dario Andres 2009-12-10 22:33:18 UTC
*** Bug 218174 has been marked as a duplicate of this bug. ***
Comment 37 Dario Andres 2009-12-12 12:58:28 UTC
*** Bug 218374 has been marked as a duplicate of this bug. ***
Comment 38 Christoph Feck 2010-01-27 00:17:30 UTC
*** Bug 224412 has been marked as a duplicate of this bug. ***
Comment 39 Dario Andres 2010-01-31 01:18:52 UTC
From bug 224940:
-- What I was doing when the application crashed:
I use a tiling window manager (xmonad) and had three konsole windows with a
number of tabs on the screen. I pressed a window manager key to rearrange the
windows, and konsole crashed.
Comment 40 Dario Andres 2010-01-31 01:18:53 UTC
*** Bug 224940 has been marked as a duplicate of this bug. ***
Comment 41 Kenyon Ralph 2010-01-31 01:30:56 UTC
I see that Comment #23 mentions irssi in konsole. I also had irssi in one of my konsoles when it crashed (the rest of my info is in Comment #39). I also had mutt in another konsole window. Both irssi and mutt were running in screen. My terminals are set up to support 256 colors. My konsole font was Deja Vu Sans Mono.
Comment 42 Christoph Feck 2010-01-31 01:55:32 UTC
I see no code in Konsole that readjusts/clears the hotSpots on resize, causing access to invalid character positions in _image on line 1321. From how I understand the code, we need to add a call to processFilters() when we got a resizeEvent.
Comment 43 Dario Andres 2010-02-05 14:14:24 UTC
*** Bug 225614 has been marked as a duplicate of this bug. ***
Comment 44 Dario Andres 2010-02-06 23:58:00 UTC
From bug 225737:
- What I was doing when the application crashed:
Using KDE 4.3.2 on Gnu/Linux Debian Squeeze (Testing) with 2.6.32 Kernel I had
a konsole crash during apt-get update action
Comment 45 Dario Andres 2010-02-06 23:58:02 UTC
*** Bug 225737 has been marked as a duplicate of this bug. ***
Comment 46 Jonathan Thomas 2010-02-11 00:00:27 UTC
*** Bug 226214 has been marked as a duplicate of this bug. ***
Comment 47 Tobias Hochgürtel 2010-02-12 14:08:31 UTC
Created attachment 40713 [details]
New crash information added by DrKonqi

I was running kdevelop 4 (PHP) with an "terminal (konsole)" as Debug Window, where I can see what kdevelop says when I do some things.. First I have resized the Window to very small size and after a ~ 4Mins I tried (then crash..) to resize the window to an bigger read able size, this resizing was very fast so I think.. and then the konsole crashed. I have compiz on and using KDE4.4 (PPA:KUBUNTU).
Comment 48 Dario Andres 2010-02-15 16:08:10 UTC
From bug 226645:
-- What I was doing when the application crashed:
I splitted konsole and had 3 tabs open, then I wanted to change tab in the
lower buffer and konsole crashed
Comment 49 Dario Andres 2010-02-15 16:08:13 UTC
*** Bug 226645 has been marked as a duplicate of this bug. ***
Comment 50 Kurt Hindenburg 2010-02-16 05:46:10 UTC
#42, yes I think you are correct.  The line that crashes is the 'while (QChar(_image[loc' around 1320 in TerminalDisplay.cpp.


It took me a while to get it to crash somewhat reliably. You need a hotspot (link) with spaces on the end and then resize.

I'll see what patch I can put together.
Comment 51 Eike Hein 2010-02-23 13:52:12 UTC
*** Bug 228156 has been marked as a duplicate of this bug. ***
Comment 52 Eike Hein 2010-02-23 13:53:15 UTC
Bug 228156 has a constraint as to in what circumstances this happens.
Comment 53 Kurt Hindenburg 2010-02-23 17:11:27 UTC
SVN commit 1095077 by hindenburg:

Recreate hotspots on resize.

CCBUG: 199161


 M  +1 -0      TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095077
Comment 54 Kurt Hindenburg 2010-02-23 17:31:40 UTC
SVN commit 1095087 by hindenburg:

Recreate hotspots on resize.

BUG: 199161


 M  +1 -0      TerminalDisplay.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095087
Comment 55 Eike Hein 2010-06-11 13:02:46 UTC
*** Bug 241411 has been marked as a duplicate of this bug. ***
Comment 56 Christoph Feck 2010-11-09 18:20:15 UTC
*** Bug 235213 has been marked as a duplicate of this bug. ***
Comment 57 Christoph Feck 2010-11-09 18:20:47 UTC
*** Bug 236478 has been marked as a duplicate of this bug. ***
Comment 58 Christoph Feck 2010-11-09 18:21:27 UTC
*** Bug 231070 has been marked as a duplicate of this bug. ***