Recreate hotspots on resize.

BUG: 199161

svn path=/branches/KDE/4.4/kdebase/apps/konsole/; revision=1095087